--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -10,31 +10,37 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   {% block extra_styles %}
   {% endblock %}
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="{% static 'js/funcoes.js' %}"></script>
-
+  
 </head>
+
 <body>
   <header>
     <a href="{% url 'items_main' %}">
-      <img  src="{% static "img/foto-logo-din.png" %}" alt="Logo"  style="height: 80px;margin-top: 10px">
+      <img src="{% static 'img/foto-logo-din.png' %}" alt="Logo" style="height: 80px; margin-top: 10px;">
     </a>
     <a class="button_logout" href="{% url 'login' %}">SAIR</a>
   </header>
-  
+
   <div class="menu-container" id="menu-container">
     <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
     <div class="menu-content" id="menu-content">
-        <a href="{% url "itemsAuditLog" %}">Histórico</a>
+      <a href="{% url 'itemsAuditLog' %}">Histórico</a>
+      <a href="{% url 'items_dashboard' %}">Dashboard</a>
     </div>
   </div>
 
   <main>
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
   </main>
   
-  {% block extra_scripts %}{% endblock %}
+  {% block extra_scripts %}
+    <script src="{% static 'js/funcoes.js' %}"></script>
+  {% endblock %}
 </body>
 </html>
