--- a/items/templates/items/pag_subs_category/items_informatica.html
+++ b/items/templates/items/pag_subs_category/items_informatica.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %} 
+
   <div class="container">
     <h1 class="titulo">Itens na Categoria: {{ request.resolver_match.kwargs.category }}</h1>
     <h2>Sub-Categorias: </h2>
@@ -26,15 +27,23 @@
                   <div class="item-row">
                     <div class="dados_items">
                       <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
+                        <p><span>Entrada no estoque:</span></p>
+                        <p>{{item.create_at}}</p>
+                        <p><span>Nome:</span> {{ item.name }}</p>
+                        <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+                        <p><span>Marca:</span> {{item.brand}}</p>
+                        <p><span>Modelo:</span> {{item.model}}</p>
                       </div>
                     </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
-                      <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
+                    <div class="menu-container">
+                      <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
+                      <div class="menu-content" id="menuDropdown">
+                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
+                      </div>
+                    </div> 
                   </div>
                 {% endif %}
               {% endfor %}
@@ -45,6 +54,7 @@
               {% endif %}
             </div>
           </div>
+
           <div class="item">
             <div class="header" onclick="toggleContent(this)">
               <span class="arrow">&#9654;</span> 
@@ -56,15 +66,23 @@
                   <div class="item-row">
                     <div class="dados_items">
                       <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
+                        <p><span>Entrada no estoque:</span></p>
+                        <p>{{item.create_at}}</p>
+                        <p><span>Nome:</span> {{ item.name }}</p>
+                        <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+                        <p><span>Marca:</span> {{item.brand}}</p>
+                        <p><span>Modelo:</span> {{item.model}}</p>
                       </div>
                     </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
-                      <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
+                    <div class="menu-container">
+                      <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
+                      <div class="menu-content" id="menuDropdown">
+                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
+                      </div>
+                    </div> 
                   </div>
                 {% endif %}
               {% endfor %}
@@ -86,15 +104,23 @@
                   <div class="item-row">
                     <div class="dados_items">
                       <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
+                        <p><span>Entrada no estoque:</span></p>
+                        <p>{{item.create_at}}</p>
+                        <p><span>Nome:</span> {{ item.name }}</p>
+                        <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+                        <p><span>Marca:</span> {{item.brand}}</p>
+                        <p><span>Modelo:</span> {{item.model}}</p>
                       </div>
                     </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
-                      <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
+                    <div class="menu-container">
+                      <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
+                      <div class="menu-content" id="menuDropdown">
+                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
+                      </div>
+                    </div> 
                   </div>
                 {% endif %}
               {% endfor %}
@@ -116,15 +142,22 @@
                   <div class="item-row">
                     <div class="dados_items">
                       <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
+                        <p><span>Entrada no estoque:</span></p>
+                        <p>{{item.create_at}}</p>
+                        <p><span>Nome:</span> {{ item.name }}</p>
+                        <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+                        <p><span>Marca:</span> {{item.brand}}</p>
+                        <p><span>Modelo:</span> {{item.model}}</p>
                       </div>
-                    </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
-                      <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
+                    <div class="menu-container">
+                      <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
+                      <div class="menu-content" id="menuDropdown">
+                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
+                      </div>
+                    </div> 
                   </div>
                 {% endif %}
               {% endfor %}
@@ -146,15 +179,23 @@
                   <div class="item-row">
                     <div class="dados_items">
                       <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
+                        <p><span>Entrada no estoque:</span></p>
+                        <p>{{item.create_at}}</p>
+                        <p><span>Nome:</span> {{ item.name }}</p>
+                        <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+                        <p><span>Marca:</span> {{item.brand}}</p>
+                        <p><span>Modelo:</span> {{item.model}}</p>
                       </div>
                     </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
-                      <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
+                    <div class="menu-container">
+                      <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
+                      <div class="menu-content" id="menuDropdown">
+                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
+                      </div>
+                    </div> 
                   </div>
                 {% endif %}
               {% endfor %}
@@ -176,15 +217,23 @@
                   <div class="item-row">
                     <div class="dados_items">
                       <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
+                        <p><span>Entrada no estoque:</span></p>
+                        <p>{{item.create_at}}</p>
+                        <p><span>Nome:</span> {{ item.name }}</p>
+                        <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+                        <p><span>Marca:</span> {{item.brand}}</p>
+                        <p><span>Modelo:</span> {{item.model}}</p>
                       </div>
                     </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
-                      <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
+                    <div class="menu-container">
+                      <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
+                      <div class="menu-content" id="menuDropdown">
+                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
+                      </div>
+                    </div> 
                   </div>
                 {% endif %}
               {% endfor %}
