--- a/items/templates/items/items_confirm_delete.html
+++ b/items/templates/items/items_confirm_delete.html
@@ -14,7 +14,7 @@
     <form method="post">
       {% csrf_token %}
       <button type="submit" class="btn btn-excluir">Excluir</button>
-      <a href="{%url 'items_main'%}" class="btn btn-cancelar">Cancelar</a>
+      <a href="{{ previous_page }}" class="btn btn-cancelar">Cancelar</a>
     </form>
   </div> 
 {% endblock %}
