--- a/items/staticfiles/css/base.css
+++ b/items/staticfiles/css/base.css
@@ -37,24 +37,32 @@ header .button_logout {
   color: white;
 }
 
-
 .menu-button {
   font-size: 30px;
   cursor: pointer;
   background: none;
   border: none;
   color: black;
+  z-index: 1;
+}
+
+.menu-container {
+  position: relative;
 }
 
 .menu-content {
-  display: none;
+  display: none; /* Garantir que o menu comece fechado */
+  position: absolute;
+  top: 100%;
+  left: 0;
   background-color: #f0f0f0;
   width: 400px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
 
 .menu-content.open {
-  display: block;
+  display: block; /* Exibe o menu quando a classe 'open' é adicionada */
 }
 
 .menu-content a {
