--- a/items/staticfiles/css/base.css
+++ b/items/staticfiles/css/base.css
@@ -1,3 +1,4 @@
+/* Reset e estilos básicos */
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +15,7 @@ body, html {
   height: 100%;
 }
 
+/* Header e menu */
 header {
   display: flex;
   height: 95px;
@@ -37,6 +39,7 @@ header .button_logout {
   color: white;
 }
 
+/* Menu */
 .menu-button {
   font-size: 30px;
   cursor: pointer;
@@ -72,3 +75,69 @@ header .button_logout {
   color: black;
 }
 
+/* Container e formulário */
+main {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+  height: auto;
+}
+
+/* Estilos de botões */
+main .btn,
+main a {
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 8px 12px;
+  margin: 20px 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+main .btn-save {
+  background-color: green;
+  color: black;
+}
+
+main .btn-cancelar {
+  background-color: red;
+  color: black;
+}
+
+/* Media Queries para dispositivos menores */
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  header a {
+    font-size: 18px;
+  }
+
+  header .button_logout {
+    padding: 5px 15px;
+  }
+
+  main .btn,
+  main a {
+    font-size: 16px;
+    padding: 6px 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  header a {
+    font-size: 16px;
+  }
+
+  main .btn,
+  main a {
+    font-size: 14px;
+    padding: 5px 8px;
+  }
+}
