--- a/items/staticfiles/css/items_form.css
+++ b/items/staticfiles/css/items_form.css
@@ -1,10 +1,3 @@
-main {
-  display: flex;
-  justify-content: center;
-  margin: 10px 0;
-  height: auto;
-}
-
 .container {
   width: 80%;
   max-width: 800px;
@@ -12,6 +5,9 @@ main {
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .container h1 {
@@ -19,15 +15,23 @@ main {
   color: black;
 }
 
-label {
-  color: black;
+/* Labels específicos para formulários */
+.form-group label {
   font-size: 18px;
+  font-weight: bold;
+  margin: 5px;
+  color: #333;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 20px;
 }
+
 
 input[type="text"],
 input[type="number"],
-form .form-control {
-  width: 100%;
+.form-control,
+.input-group {
+  width: calc(100% - 50px); /* Ajusta a largura para deixar espaço para o botão */
   border: 1px solid #ccc;
   border-radius: 3px;
   box-sizing: border-box;
@@ -37,51 +41,35 @@ form .form-control {
   font-size: 18px;
 }
 
-.form-label {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 5px;
-  color: #333;
+.form-text {
+  font-size: 0.9em;
+  color: #ff0000; /* Cinza claro */
+  padding-left: 10px;
 }
 
-main .btn,
-main a {
-  text-align: center;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 8px 12px;
-  margin: 20px 5px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  display: inline-block;
+
+.input-group {
+  width: 97%;
+  border: 0;
+  padding-top: 0;
+  margin: 0;
+  margin-top: 2px;
+  margin-left: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
-main .btn-save {
-  background-color: green;
-  color: black;
+.input-group-append {
+  margin-right: 0px;
 }
 
-main .btn-cancelar {
-  background-color: red;
-  color: black;
+.input-group #id_tombo {
+  width: 95%;
 }
 
 /* Media Queries para dispositivos menores */
 @media (max-width: 768px) {
-  header {
-    flex-direction: column;
-    height: auto;
-    padding: 20px;
-  }
-
-  header a {
-    font-size: 18px;
-  }
-
-  header .button_logout {
-    padding: 5px 15px;
-  }
 
   .container {
     width: 90%;
@@ -98,18 +86,9 @@ main .btn-cancelar {
   .form-label {
     font-size: 16px;
   }
-
-  main .btn,
-  main a {
-    font-size: 16px;
-    padding: 6px 10px;
-  }
 }
 
 @media (max-width: 480px) {
-  header a {
-    font-size: 16px;
-  }
 
   .container {
     width: 100%;
@@ -127,9 +106,4 @@ main .btn-cancelar {
     font-size: 14px;
   }
 
-  main .btn,
-  main a {
-    font-size: 14px;
-    padding: 5px 8px;
-  }
 }
