--- a/items/templates/items/items_form.html
+++ b/items/templates/items/items_form.html
@@ -10,40 +10,90 @@
 
 {% block content %}
   <div class="container">
+
     <h1>{{ title }}</h1>
+
+    <!-- Item já existe -->
     {% if items.pk %}
+
       <form method="POST">
+
         {% csrf_token %}
+
         {{ form.non_field_errors }}
+        
         <!-- Renderização dos demais campos automaticamente -->
         {% for field in form %}
+
           {% if field.name != 'category' and field.name != 'sub_category' %}
               {{ field|as_crispy_field }}
           {% endif %}
+
         {% endfor %}
+
         <!-- Campo 'category' e 'sub-category' desativado manualmente -->
-        <div class="form-group">
-          <label for="{{ form.category.id_for_label }}">Categoria</label>
-          <input type="text" name="{{ form.category.name }}" id="{{ form.category.id_for_label }}" value="{{ form.category.value }}" class="form-control" readonly>
+        <div class = "form-group">
+          <label for = "{{ form.category.id_for_label }}"> Categoria </label>
+          <input type = "text" name = "{{ form.category.name }}" id = "{{ form.category.id_for_label }}" value = "{{ form.category.value }}" class = "form-control" readonly>
         </div>
-        <div class="form-group">
-          <label for="{{ form.sub_category.id_for_label }}">Sub-Categoria</label>
-          <input type="text" name="{{ form.sub_category.name }}" id="{{ form.sub_category.id_for_label }}" value="{{ form.sub_category.value }}" class="form-control" readonly>
+
+        <div class = "form-group">
+          <label for = "{{ form.sub_category.id_for_label }}"> Sub-Categoria </label>
+          <input type = "text" name = "{{ form.sub_category.name }}" id = "{{ form.sub_category.id_for_label }}" value = "{{ form.sub_category.value }}" class = "form-control" readonly>
         </div>
-        <button type="submit" class="btn btn-save">Salvar</button>
-        <a href="{{ previous_page }}" class="btn btn-cancelar">Cancelar</a>
+
+        <button type = "submit" class = "btn btn-save"> Salvar </button>
+        <a href = "{{ previous_page }}" class = "btn btn-cancelar"> Cancelar </a>
+
       </form>
+    
+    <!-- Item sendo criado -->
     {% else %}
+
       <form method="POST">
         {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-save">Salvar</button>
-        <a href="{{ previous_page }}" class="btn btn-cancelar">Cancelar</a>
+
+        <!-- Renderização manual do campo 'tombo' e botão -->
+        <div id="tombo-container" class="tombo-container">
+          <div class="form-group">
+            <label for="{{ form.tombo.id_for_label }}">{{ form.tombo.label }}</label>
+        
+            <small class="form-text text-muted">Caso tenha que cadastrar mais de um item com tombos, especifique e adicione quantos tombos for necessários</small>
+        
+            <div class="input-group">
+              {{ form.tombo }}
+              <div class="input-group-append">
+                <button type="button" class="btn btn-primary" id="add-tombo-btn">add</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <!-- Renderização dos demais campos automaticamente -->
+        {% for field in form %}
+
+          {% if field.name != 'tombo' %}
+
+            <div class="form-group">
+              {{ field.label_tag }}
+              {{ field }}
+            </div>
+
+          {% endif %}
+
+        {% endfor %}
+        
+        <button type = "submit" class = "btn btn-save"> Salvar </button>
+        <a href = "{{ previous_page }}" class = "btn btn-cancelar"> Cancelar </a>
+
       </form>
+
     {% endif %}
   </div>
+
   <script type="text/javascript">
     $(document).ready(function() {
+      // Campos select category e sub-category
       $('#id_category').change(function() {
         var category = $(this).val();
         $.ajax({
