--- a/items/staticfiles/css/base.css
+++ b/items/staticfiles/css/base.css
@@ -1,4 +1,3 @@
-/* Reset e estilos básicos */
 * {
   margin: 0;
   padding: 0;
@@ -15,7 +14,6 @@ body, html {
   height: 100%;
 }
 
-/* Header e menu */
 header {
   display: flex;
   height: 95px;
@@ -39,7 +37,7 @@ header .button_logout {
   color: white;
 }
 
-/* Menu */
+
 .menu-button {
   font-size: 30px;
   cursor: pointer;
@@ -49,41 +47,30 @@ header .button_logout {
   z-index: 1;
 }
 
-.menu-container {
-  position: relative;
-}
-
-.menu-content {
-  display: none; /* Garantir que o menu comece fechado */
-  position: absolute;
-  top: 100%;
-  left: 0;
+.menu-content-op {
+  height: 60px;
+  align-content: center;
   background-color: #f0f0f0;
-  width: 400px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 10;
 }
 
-.menu-content.open {
-  display: block; /* Exibe o menu quando a classe 'open' é adicionada */
-}
-
-.menu-content a {
-  display: block;
+.menu-content-op a {
   padding: 10px;
+  font-size: 18px;
+  font-weight: bold;
   text-decoration: none;
   color: black;
 }
 
-/* Container e formulário */
 main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 10px 0;
   height: auto;
 }
 
-/* Estilos de botões */
 main .btn,
 main a {
   text-align: center;
@@ -107,7 +94,6 @@ main .btn-cancelar {
   color: black;
 }
 
-/* Media Queries para dispositivos menores */
 @media (max-width: 768px) {
   header {
     flex-direction: column;
