--- a/items/staticfiles/css/items_form.css
+++ b/items/staticfiles/css/items_form.css
@@ -7,12 +7,16 @@
   box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
 }
 
 .container h1 {
   margin-bottom: 20px;
   color: black;
+}
+
+form {
+  width: 100%;
 }
 
 /* Labels específicos para formulários */
