--- a/items/staticfiles/css/items_sub.css
+++ b/items/staticfiles/css/items_sub.css
@@ -1,9 +1,6 @@
 main {
-  flex: 1;
   padding: 100px 20px 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
 }
 
 .container {
@@ -107,15 +104,14 @@ main {
 }
 
 .menu-content {
-  display: none; 
   position: absolute;
-  top: 100%;
-  left: 0; 
   background-color: white;
   border: 1px solid #ddd; 
-  z-index: 1000; 
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
   padding: 10px; 
+  width: 300px;
+  z-index: 100;
+  height: unset;
 }
 
 .menu-content a {
@@ -123,8 +119,9 @@ main {
   text-decoration: none;
   padding: 10px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
-  border-bottom: 1px solid #f1f1f1;
+  color: #000;
+  border-bottom: 1px solid #ddd;
+  white-space: nowrap;
 }
 
 .expandable-list .header.active .arrow {
@@ -132,16 +129,10 @@ main {
 }
 
 .btn {
-  display: flex;
-  font-weight: initial;
   font-size: 20px;
-  padding: 10px 20px;
+  padding: 5px;
   cursor: pointer;
-  border-radius: 5px;
-  color: white;
-  text-align: center;
-  text-decoration: none; 
-  justify-content: space-evenly;
+  border: none;
 }
 
 .btn-visualizar {
